--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name":"netzmacht/contao-dcatools",
     "description":"",
-    "keywords":["dca", "datacontainer", "palettes", 'devtool'],
+    "keywords":["dca", "datacontainer", "palettes", "devtool"],
     "type":"contao-module",
     "license":"LGPL-3.0+",
     "authors":[
