--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,11 @@
         "contao/core":">=3.1",
         "symfony/event-dispatcher":">=2.3"
     },
+    "autoload":{
+        "psr-0":{
+            "DcaTools" : "src/"
+        }
+    },
     "extra":{
         "contao": {
             "symlinks":{
