--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
     ],
     "require":{
         "php":">=5.3",
-        "contao/core":">=3.1",
-        "symfony/event-dispatcher":">=2.3"
+        "contao/core":">=3.1,<3.3",
+        "contao-community-alliance/dependency-container":">=1.3.x-dev",
+        "contao-community-alliance/event-dispatcher":">=1.0.x-dev"
     },
     "autoload":{
         "psr-0":{
@@ -25,7 +26,7 @@
     "extra":{
         "contao": {
             "symlinks":{
-                "src/system/modules/dcatools":"system/modules/dcatools"
+                "module":"system/modules/dcatools"
             }
         }
     }
