--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php":">=5.3",
         "contao/core":">=3.1,<3.3",
         "contao-community-alliance/dependency-container":">=1.3.x-dev",
-        "contao-community-alliance/event-dispatcher":">=1.0.x-dev"
+        "contao-community-alliance/event-dispatcher":">=1.0.x-dev",
+        "beberlei/assert":"~2.0"
     },
     "autoload":{
         "psr-0":{
@@ -25,7 +26,7 @@
     },
     "extra":{
         "contao": {
-            "symlinks":{
+            "sources":{
                 "module":"system/modules/dcatools"
             }
         }
