--- a/module/config/autoload.ini
+++ b/module/config/autoload.ini
@@ -3,6 +3,6 @@
 ;;
 register_namespaces = false
 register_classes    = false
-register_templates  = true
+register_templates  = false
 
 requires[] = dependency-container;
